# hello_solana

./: Anchor.toml  README.md  package.json
docs/: ownership.md  pda.md  rpg.md
programs/hello_solana/: Cargo.toml  README.md
programs/hello_solana/src/: lib.rs
programs/hello_solana/src/cpi/: alice.rs  bob.rs  docs.md  test.ts
programs/hello_solana/src/instructions/: batch_tx.rs  check_account.rs  close.rs  counter.rs  create.rs  create_or_close_user.rs  crowd_fund.rs  error.rs  events.rs  favorites.rs  initialize.rs  initialized.rs  mappings.rs  mod.rs  only_owner.rs  ownership.rs  price_updater.rs  realloc.rs  rent.rs  send_sol.rs  sysvars.rs  uncheck.rs
programs/hello_solana/src/state/: address_info.rs  counter.rs  favorites.rs  mapping.rs  mod.rs  my_storage.rs  price_data.rs  user_state.rs
programs/rpg/: Cargo.toml  README.md
programs/rpg/src/: constants.rs  helpers.rs  lib.rs
programs/rpg/src/error/: error.rs  mod.rs
programs/rpg/src/instructions/: attack_monster.rs  collect_points.rs  create_game.rs  create_player.rs  mod.rs  spawn_monster.rs
programs/rpg/src/state/: game.rs  mod.rs  player.rs
tests/: docs.md  func.md  hello_solana.ts  rpg.ts
